# zyan-disassembler-engine

./: CMakeLists.txt
Bindings/C/: VXDisassemblerTypesC.h  VXInstructionDecoderC.h
Bindings/Rust/: Cargo.toml
Bindings/Rust/src/: disassembler_types.rs  disassembler_utils.rs  instruction_decoder.rs  lib.rs  opcode_table.rs
